XW-5118: fix spacing between PI

--- a/app/styles/module/article/_portable-infobox.scss
+++ b/app/styles/module/article/_portable-infobox.scss
@@ -15,7 +15,7 @@ $infobox-img-border: 1px solid $wds-fandom-color-middle-gray;
 	position: relative;
 
 	&:nth-of-type(n + 2) {
-		margin-top: 12px;
+		margin-top: 36px;
 	}
 }
 
